8183012: Code cleanup in com.sun.tools.jdi
Reviewed-by: sspitsyn, stuefe